dan: fixed z-index bugs for nav bar andpassword input field

--- a/website/stylesheet.css
+++ b/website/stylesheet.css
@@ -91,7 +91,7 @@ body, html {
   right: 60px;
   left: 40px;
  position: fixed;
-  z-index: 3;
+  /*z-index: 3;*/
   background-color: black;
   height: 320px; /*320 for reduced navbar */
   /*width: 100%;*/
@@ -114,7 +114,7 @@ body, html {
 position: fixed;
   display: block;
   margin: auto;
-  z-index: 10;
+  /*z-index: 10;*/
   transition: opacity 3s ease;
 }
 
